# Autonomous_Car_Controller

./: README.md
control_solution/: CMakeLists.txt  package.xml
control_solution/launch/: solution.launch
control_solution/src/: control_solution_node.cpp
opencv_solution/: CMakeLists.txt  package.xml
opencv_solution/launch/: opencv_solution.launch
opencv_solution/src/: opencv_solution_node.cpp
pcl_solution/: CMakeLists.txt  package.xml
pcl_solution/src/: pcl_solution_node.cpp
simple_control/: CMakeLists.txt  package.xml
simple_control/launch/: simple_control.launch
simple_control/src/: simple_control_node.cpp
